--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,7 @@
 }
 
 body{
-	background-image: url(../media/image/CVG-1004-Chrome-Carbon.jpg);
+	background-image: url(../media/image/preview.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
