--- a/css/app.css
+++ b/css/app.css
@@ -24,8 +24,8 @@ body{
 }
 
 h1 {
-	font-weight: 700; /* Félkövér */
+	font-weight: 700;
 }
 p {
-	font-weight: 400; /* Normál */
+	font-weight: 400; 
 }
